@@ -1,0 +1,16 @@
+cat >$CRONTABS/:etc:crontab <<EOF
+* * * * * root line1
+0-10/3 * * * * nobody line2
+30 1 2 3 4 nobody line3
+EOF
+
+startsched
+kill -USR1 $sched_pid
+stopsched
+<result>
+bcron-sched: Starting
+bcron-sched: Loading ':etc:crontab'
+bcron-sched: Crontab ":etc:crontab":
+bcron-sched: M:0-59 H:0-23 d:1-31 m:0-11 wd:0-6 hc:24 next:####-##-## ##:##:## #TZ runas:(root) cmd:(line1)
+bcron-sched: M:0,3,6,9 H:0-23 d:1-31 m:0-11 wd:0-6 hc:24 next:####-##-## ##:##:## #TZ runas:(nobody) cmd:(line2)
+bcron-sched: M:30 H:1 d:2 m:2 wd:4 hc:1 next:####-##-## ##:##:## #TZ runas:(nobody) cmd:(line3)
