@@ -14,6 +14,8 @@ Changes in version 0.10
 - Fixed a bug in bcron-spool that caused listing missing crontabs to
   silently succeed.
 
+- Added support for dumping the current job schedule in bcron-sched.
+
 Development of this version has been sponsored by FutureQuest, Inc.
 ossi@FutureQuest.net  http://www.FutureQuest.net/
 -------------------------------------------------------------------------------
